exemple read_csv2

--- a/atelier_import_fichiers.Rmd
+++ b/atelier_import_fichiers.Rmd
@@ -199,6 +199,22 @@ Utiliser cet assistant :
 
 ---
 
+# Importer des fichiers plats avec {readr}
+
+```{r, warning = FALSE}
+library(readr)
+read_csv2(
+  "bpe19_ensemble.csv",
+  col_types = cols(
+    REG = col_character(), DEP = col_character(),
+    AN = col_integer(), NB_EQUIP = col_integer()
+  )
+)
+```
+
+
+---
+
 # Importer des fichiers issus de tableurs
 
 ---
