--- a/atelier_import_fichiers.Rmd
+++ b/atelier_import_fichiers.Rmd
@@ -187,7 +187,7 @@ Utiliser cet assistant :
 
 | Argument    | Valeur par défaut | Fonction                                                       |
 |-------------|-------------------|----------------------------------------------------------------|
-| `file`      | Aucune            | Le chemin du fichier à importer                                |
+| `file`      |                   | Le chemin du fichier à importer                                |
 | `col_names` | `TRUE`            | La première ligne contient-elle les noms de colonne ?          |
 | `col_types` | `NULL`            | Définir le type des variables                                  |
 | `skip`      | `0`               | Nombre de lignes à ignorer (aucune par défaut)                 |
