--- a/atelier_import_fichiers.Rmd
+++ b/atelier_import_fichiers.Rmd
@@ -248,6 +248,39 @@ Elle présente trois avantages :
 
 ---
 
+# Importer des fichiers plats volumineux
+
+```{r, warning = FALSE}
+library(data.table)
+fread(
+ "bpe19_ensemble.csv",
+  colClasses = c(
+    REG = "character",
+    NB_EQUIP = "integer"
+  ),
+  encoding = "UTF-8"
+)
+```
+
+---
+
+# Importer des fichiers plats volumineux
+
+```{r, warning = FALSE}
+library(data.table)
+fread(
+ "bpe19_ensemble.csv",
+ select = c("DEPCOM", "TYPEQU", "NB_EQUIP"), # colonnes gardées
+  colClasses = c(
+    REG = "character",
+    NB_EQUIP = "integer"
+  ),
+  encoding = "UTF-8"
+)
+```
+
+---
+
 # Importer des fichiers issus de tableurs
 
 ---
