--- a/atelier_import_fichiers.Rmd
+++ b/atelier_import_fichiers.Rmd
@@ -308,9 +308,15 @@ fread(
 
 .recommandation[
 
-- fichiers **xlsx** <br/> → fonction `read.xlsx` du _package_ `{openxlsx}`
-- fichiers **xls** <br/> → fonction `read_excel` du _package_ `{readxl}` \*
-- fichiers **ods** <br/> → fonction `read_ods` du _package_ `{readODS}`
+.sauterligne[
+- fichier **xlsx** <br/> → fonction `read.xlsx` du _package_ `{openxlsx}`
+]
+.sauterligne[
+- fichier **xls** <br/> → fonction `read_excel` du _package_ `{readxl}` \*
+]
+.sauterligne[
+- fichier **ods** <br/> → fonction `read_ods` du _package_ `{readODS}`
+]
 
 .sauterligne[
 Il est déconseillé d'utiliser le _package_ `{xlsx}`.
@@ -323,7 +329,7 @@ Il est déconseillé d'utiliser le _package_ `{xlsx}`.
 
 .sauterligne3[
 .small80[
-\* peut également importer des fichiers `xlsx`, mais moins rapide que `openxlsx::read.xlsx()`
+\* peut également importer des fichiers `xlsx`, mais moins rapide que `openxlsx::read.xlsx`
 ]
 ]
 
